Reports under development

--- a/report_statement/templates/report_umlrs_02.html
+++ b/report_statement/templates/report_umlrs_02.html
@@ -4,7 +4,6 @@
 <style>
 </style>
 <script type="text/javascript">
-
           $(function() { 
 			$('#rd1').puiradiobutton();
 			$('#uncheckradio').puibutton();
@@ -49,6 +48,7 @@
   </thead>
   <tbody>
   </tbody>
+  <tfoot></tfoot>
 </table>
 {% endif %}
 
