--- a/uploadeXe/templates/reports.html
+++ b/uploadeXe/templates/reports.html
@@ -7,6 +7,7 @@
 			$('#stmtsdynadb').puibutton();
 			$('#mystmtsdynadb').puibutton();
 			$('#chartjstest').puibutton();
+			$('#usagereport').puibutton();
                 }
           ); 
 </script>
@@ -19,7 +20,9 @@
 		<!--<a href="/statementsreports/"><button id="statementsreports" type="button"style="width:200px;height:100px">Old Statements Report</button></a>-->
 		<a href="/reports/mystmtsdynadb/"><button id="mystmtsdynadb" type="button"style="width:200px;height:100px">My Statements Report</button></a>
 		<a href="/reports/stmtsdynadb/"><button id="stmtsdynadb" type="button"style="width:200px;height:100px">All Statements Report</button></a>
-		<a href="/reports/chartjstest_selection/"><button id="chartjstest" type="button"style="width:200px;height:100px">Usage Report</button></a>
+		<a href="/reports/chartjstest_selection/"><button id="chartjstest" type="button"style="width:200px;height:100px">Day Usage Report</button></a>
+		<a href="/reports/usagereport_selection/"><button id="usagereport" type="button"style="width:200px;height:100px">Usage Report</button></a>
+		
 	</ul>
     </div>
 
