--- a/report_statement/templates/report_umlrs_05.html
+++ b/report_statement/templates/report_umlrs_05.html
@@ -19,8 +19,8 @@
                                         dataset: {
                                         records:[
                                                 {% if yaxis %}
-                                                        {% for l,u,d in yaxis  %}
-                                                                {"user":"{{l}}","duration":"{{d}}"}{% if not forloop.last %},{% endif %}
+                                                        {% for l,u,d,id in yaxis  %}
+                                                                {"user":"<a href=\"getstatements/{{id}}/\" >{{l}}</a>","duration":"{{d}}"}{% if not forloop.last %},{% endif %}
                                                         {% endfor %}
                                                 {% endif %}
                                                 ]
@@ -98,7 +98,7 @@ $(function() {
 {% if state %}
 <p class="error" style="color:red;"><i>{{state}}</i></p>
 {% else %}
-
+<h3><i><center>Usage Report between {{date_since|date:"d M Y"}} and {{date_until|date:"d M Y"}}</center></i></h3>
 <table id="{{tabletypeid}}">
   <thead>
     {% for d, f in table_headers_html %}
@@ -112,7 +112,6 @@ $(function() {
 <br></br>
 <!-- HTML goes here -->
 <h3><i><center>Time vs Usage Report between {{date_since|date:"d M Y"}} and {{date_until|date:"d M Y"}}</center></i></h3>
-
 <p></p>
 <canvas id="myChart" width="800" height="400"></canvas>
 
