--- a/report_statement/templates/report_umlrs_05_selection.html
+++ b/report_statement/templates/report_umlrs_05_selection.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Generate a Statement Report {% endblock %}
+{% block title %}Generate a Usage Report {% endblock %}
 {% block content %}
 {% if form.errors %}
     <p class="error"> Sorry, that is not a valid selection</p>
