--- a/report_statement/templates/report_umlrs_05_selection.html
+++ b/report_statement/templates/report_umlrs_05_selection.html
@@ -59,7 +59,8 @@
 		altFieldTimeOnly: false,
 		altFormat: "yy-mm-dd",
 		altTimeFormat: "h:m",
-		altSeparator: "T"
+		altSeparator: "T",
+		setDate: "7"
 	});
 	$('#until_1').datetimepicker({
                 altField: "#until_1_alt",
@@ -68,6 +69,7 @@
                 altTimeFormat: "h:m",
                 altSeparator: "T",
 		maxDate: "2",
+		setDate: "1"
 
 	});
 </script>
