--- a/report_statement/templates/report_umlrs_05_selection.html
+++ b/report_statement/templates/report_umlrs_05_selection.html
@@ -35,7 +35,7 @@
     </div>
 
     <div style="padding-bottom:10px;">
-	<label>End date></label>
+	<label>End date</label>
         <!--Until:&nbsp;&nbsp;-->
 	<input type="text" name="until_1" id="until_1" style="height: 30px; width: 250px;" placeholder="Until"  value="" required/>*
     </div>
