Added a new unit test script for quick run and report Further code coverage and unit tests

--- a/report_statement/templates/user_statements_report_04.html
+++ b/report_statement/templates/user_statements_report_04.html
@@ -39,7 +39,7 @@
 {% if state %}
 <p class="error" style="color:red;"><i>{{state}}</i></p>
 {% else %}
-<h3><i>My statements</i></h3>
+<h3><i>User statements</i></h3>
 <p></p>
 <table id="{{tabletypeid}}">
   <thead>
