--- a/uploadeXe/templates/myapp/manage.html
+++ b/uploadeXe/templates/myapp/manage.html
@@ -34,7 +34,7 @@
             },
             columns: [
                 {field:'name', headerText: 'Name', sortable:true},
-		{field:'pub_date', headerText: 'Published', sortable:true},
+		{field:'upd_date', headerText: 'Updated', sortable:true},
 		//{field:'url', headerText: 'URL', sortable:true},
  		{field:'publisher',headerText: 'Publisher', sorttable:true},
 
@@ -43,7 +43,7 @@
             datasource: [
                 {% if courses_as_json %}
                         {% for c in courses_as_json %}
-                        {"pk":"{{c.pk}}", "exefile":"{{c.fields.exefile}}","name":"{{c.pk}}: {{c.fields.name}}", "pub_date":"{{c.fields.pub_date}}","url":"{{c.fields.url}}","publisher":"{{c.fields.publisher}}","success":"{{c.fields.success}}"}{% if not forloop.last %},{% endif %}
+                        {"pk":"{{c.pk}}", "exefile":"{{c.fields.exefile}}","name":"{{c.pk}}: {{c.fields.name}}", "upd_date":"{{c.fields.upd_date}}","url":"{{c.fields.url}}","publisher":"{{c.fields.publisher}}","success":"{{c.fields.success}}"}{% if not forloop.last %},{% endif %}
                         {% endfor %}
                 {% endif %}
                 ],
