--- a/report_statement/templates/usage_report_06.html
+++ b/report_statement/templates/usage_report_06.html
@@ -377,7 +377,7 @@
         </div><p></p>
   	Start date 
 	<input type="text" name="since_1" id="since_1" style="height: 30px; width: 130px;" placeholder="Since" value="" />
-	&nbsp;End date <input type="text" name="until_1" id="until_1" style="height: 30px; width: 130px;" placeholder="Until"  value="" />
+	&nbsp;End date <input type="text" name="until_1" id="until_1" style="height: 30px; width: 130px;" placeholder="Until"  value="" /> <p></p><i>Default selection: One week from today</i>
      </div>
 
      <div style="display: none;">
