--- a/uploadeXe/templates/reports.html
+++ b/uploadeXe/templates/reports.html
@@ -21,7 +21,7 @@
 		<!--<a href="/mcqreports/"><button id="mcqreports" type="button"style="width:200px;height:100px">Old MCQ Report</button></a>-->
 		<!--<a href="/statementsreports/"><button id="statementsreports" type="button"style="width:200px;height:100px">Old Statements Report</button></a>-->
 		<!--<a href="/reports/mystmtsdynadb/"><button id="mystmtsdynadb" type="button"style="width:200px;height:100px">My Statements Report</button></a>-->
-		<a href="/reports/allstatements/"><button id="stmtsdynadb" type="button"style="width:200px;height:100px">All Statements Report</button></a>
+		<a href="/reports/pagi_allstatements/"><button id="stmtsdynadb" type="button"style="width:200px;height:100px">All Statements Report</button></a>
 		<!--<a href="/reports/chartjstest_selection/"><button id="chartjstest" type="button"style="width:200px;height:100px">Day Usage Report</button></a>-->
 		<a href="/reports/durationreport_selection/"><button id="durationreport" type="button"style="width:200px;height:100px">Duration Report</button></a>
 		<a href="/reports/usage_report/"><button id="usagereport" type="button"style="width:200px;height:100px;">Usage Report</button></a>
