--- a/uploadeXe/templates/user/user_create_website_individual.html
+++ b/uploadeXe/templates/user/user_create_website_individual.html
@@ -10,6 +10,14 @@
 
 {% block scriptjs %}
 <script type="text/javascript">
+	  $(function() {
+              var txt = $("input#username");
+              var func = function() {
+                  txt.val(txt.val().replace(/\s/g, ''));
+                  document.getElementById("spaceprompt").style.visibility = "visible";
+              }
+              txt.keyup(func).blur(func);
+          });
           $(function() { 
 			$('#username').puiinputtext();
 			$('#email').puiinputtext();
@@ -62,6 +70,7 @@
 
     <div data-role="fieldcontain" style="padding-bottom:5px">
 	<input type="text" name="username" id="username" placeholder="Username" style="height: 30px; width: 250px;" value="" required/>*
+        <i id="spaceprompt" style="visibility:hidden;">Spaces are not allowed in usernames</i>
     </div>
 
     {% if invitationemail %}
