--- a/uploadeXe/templates/user/user_create.html
+++ b/uploadeXe/templates/user/user_create.html
@@ -20,9 +20,15 @@
                 {% endfor %}];
           $(function() {
               var txt = $("input#username");
-              var func = function() {
-                  txt.val(txt.val().replace(/\s/g, ''));
-  		  document.getElementById("spaceprompt").style.visibility = "visible";
+              var func = function(e) {
+		if(e.keyCode != "37" && e.keyCode != "38" && e.keyCode != "39" && e.keyCode != "40"){
+                      txt.val(txt.val().replace(/\s/g, ''));
+                      if(e.keyCode == "32"){
+                          document.getElementById("spaceprompt").style.visibility = "visible";
+                      }else{
+                          document.getElementById("spaceprompt").style.visibility = "hidden";
+                      }
+                  }
               }
               txt.keyup(func).blur(func);
           }); 
@@ -87,7 +93,7 @@
     <div data-role="fieldcontain" style="padding-bottom:5px">
         <!--<label for="username">Username: &nbsp  </label>-->
         <input type="text" name="username" id="username" placeholder="Username" style="height: 30px; width: 250px;" value="" required/>
-	<i id="spaceprompt" style="visibility:hidden;">Spaces are not allowed in usernames</i>
+	<i id="spaceprompt" style="visibility:hidden;">Spaces are not allowed in usernames.</i>
     </div>
     <div data-role="fieldcontain" style="padding-bottom:5px">
         <!--<label for="email">Email:  &nbsp&nbsp</label>-->
