--- a/uploadeXe/templates/user/user_create_website_individual.html
+++ b/uploadeXe/templates/user/user_create_website_individual.html
@@ -12,9 +12,16 @@
 <script type="text/javascript">
 	  $(function() {
               var txt = $("input#username");
-              var func = function() {
-                  txt.val(txt.val().replace(/\s/g, ''));
-                  document.getElementById("spaceprompt").style.visibility = "visible";
+              var func = function(e) {
+                  //txt.val(txt.val().replace(/\s/g, ''));
+		  if(e.keyCode != "37" && e.keyCode != "38" && e.keyCode != "39" && e.keyCode != "40"){
+        	      txt.val(txt.val().replace(/\s/g, ''));
+		      if(e.keyCode == "32"){
+		          document.getElementById("spaceprompt").style.visibility = "visible";
+		      }else{
+		  	  document.getElementById("spaceprompt").style.visibility = "hidden";
+  		      }
+    		  }
               }
               txt.keyup(func).blur(func);
           });
@@ -70,7 +77,7 @@
 
     <div data-role="fieldcontain" style="padding-bottom:5px">
 	<input type="text" name="username" id="username" placeholder="Username" style="height: 30px; width: 250px;" value="" required/>*
-        <i id="spaceprompt" style="visibility:hidden;">Spaces are not allowed in usernames</i>
+        <i id="spaceprompt" style="visibility:hidden;">Spaces are not allowed in usernames..</i>
     </div>
 
     {% if invitationemail %}
