--- a/uploadeXe/templates/upload.html
+++ b/uploadeXe/templates/upload.html
@@ -49,10 +49,10 @@
      <div id="toolbarbottom" class="toolbar" >
 	<ul>
 
-		<a href="/managecourses/"><button id="managecourses" type="button" style="width:200px;height:100px;">Manage Courses</button></a>
+		<a href="/uploadeXe/managecourses/"><button id="managecourses" type="button" style="width:200px;height:100px;">Manage Courses</button></a>
                 <!--<a href="/uploadeXe/"><button id="viewelp" type="button"style="width:200px;height:100px">View Packages</button></a>-->
 		<a href="/uploadeXe/new"><button id="uploadelp" type="button"style="width:200px;height:100px">Upload Blocks</button></a>
-		<a href="/manageeXe/"><button id="manageelp" type="button"style="width:200px;height:100px">Manage Blocks</button></a>
+		<a href="/uploadeXe/manage/"><button id="manageelp" type="button"style="width:200px;height:100px">Manage Blocks</button></a>
 
 	</ul>
     </div>
