--- a/uploadeXe/templates/myapp/new.html
+++ b/uploadeXe/templates/myapp/new.html
@@ -98,7 +98,7 @@
 
 		<h3>1. Choose your files</h3>
 		<!-- Upload form. Note enctype attribute! -->
-		<form action="{% url "list" %}" method="post" enctype="multipart/form-data">
+		<form action="{% url "upload" %}" method="post" enctype="multipart/form-data">
 			{% csrf_token %}
 			<p>{{ form.non_field_errors }}</p>
 			<p>{{ form.exefile.label_tag }} {{ form.exefile.help_text }}</p>
