last activity report

--- a/report_statement/templates/check_statementinfos.html
+++ b/report_statement/templates/check_statementinfos.html
@@ -13,7 +13,7 @@
 {% if state %}
 <p class="error" style="color:red;"><i>{{state}}</i></p>
 {% else %}
-<h2>Missing Statement Infos</h2>
+<h2>Missing Data:</h2>
 {{result}}
 {% for o in object_list %}
 {{o}}
