--- a/uploadeXe/templates/reports.html
+++ b/uploadeXe/templates/reports.html
@@ -10,6 +10,7 @@
 			$('#mystmtsdynadb').puibutton();
 			$('#chartjstest').puibutton();
 			$('#durationreport').puibutton();
+			$('#lastactivity').puibutton();
                 }
           ); 
 </script>
@@ -25,6 +26,7 @@
 		<!--<a href="/reports/chartjstest_selection/"><button id="chartjstest" type="button"style="width:200px;height:100px">Day Usage Report</button></a>-->
 		<a href="/reports/durationreport_selection/"><button id="durationreport" type="button"style="width:200px;height:100px">Duration Report</button></a>
 		<a href="/reports/usage_report/"><button id="usagereport" type="button"style="width:200px;height:100px;">Usage Report</button></a>
+		<a href="/reports/lastactivity/"><button id="lastactivity" type="button"style="width:200px;height:100px;">Last Activity Report</button></a>
 		<!--<a href="/reports/responsereport_selection/"><button id="mockupusagereport" type="button" style="width:200px;height:100px;background-image: url(/media/images/beta.png);background-repeat: no-repeat;">Mock Usage Report</button></a>-->
 </a>
 		
