--- a/uploadeXe/templates/reports.html
+++ b/uploadeXe/templates/reports.html
@@ -11,6 +11,7 @@
 			$('#chartjstest').puibutton();
 			$('#durationreport').puibutton();
 			$('#lastactivity').puibutton();
+			$('#allclassattendance').puibutton();
                 }
           ); 
 </script>
@@ -27,6 +28,7 @@
 		<a href="/reports/durationreport_selection/"><button id="durationreport" type="button"style="width:200px;height:100px">Duration Report</button></a>
 		<a href="/reports/usage_report/"><button id="usagereport" type="button"style="width:200px;height:100px;">Usage Report</button></a>
 		<a href="/reports/lastactivity/"><button id="lastactivity" type="button"style="width:200px;height:100px;">Last Activity Report</button></a>
+		<a href="/reports/attendance_selection/"><button id="allclassattendance" type="button"style="width:200px;height:100px;">Attendance Report</button></a>
 		<!--<a href="/reports/responsereport_selection/"><button id="mockupusagereport" type="button" style="width:200px;height:100px;background-image: url(/media/images/beta.png);background-repeat: no-repeat;">Mock Usage Report</button></a>-->
 </a>
 		
