Added Survey report

--- a/report_statement/templates/registration_statements_tincanxml.html
+++ b/report_statement/templates/registration_statements_tincanxml.html
@@ -43,7 +43,7 @@
 
 <h2>Registration report file</h2>
 {% if result == "success" %}
-    <h3><p>Click <a href="../../media/{{registration_report_filename}}">here</a> to download the report</p> </h3>
+    <h3><p>Click <a href="../../media/{{registration_report_filename}}">here</a> to download the report from the begenning of time</p> </h3>
 {% else %}
     <p>Something went wrong in fetching the report numbers. Please email us and we will fix this.</p>
 {% endif %}
