--- a/uploadeXe/templates/reports.html
+++ b/uploadeXe/templates/reports.html
@@ -30,7 +30,7 @@
 		<a href="/reports/usage_report/"><button id="usagereport" type="button"style="width:200px;height:100px;">Usage Report</button></a>
 		<a href="/reports/lastactivity/"><button id="lastactivity" type="button"style="width:200px;height:100px;">Last Activity Report</button></a>
 		<a href="/reports/attendance_selection/"><button id="allclassattendance" type="button"style="width:200px;height:100px;">Attendance Report</button></a>
-		<a href="/reports/registrations_report_tincanxml/"><button id="regidtincan" type="button" style="width:200px;height:100px;">Registration Report</button></a>
+		<a href="/reports/registrations_report_tincanxml/"><button id="regidtincan" type="button" style="width:200px;height:100px;">Survey Report</button></a>
 		<!--<a href="/reports/responsereport_selection/"><button id="mockupusagereport" type="button" style="width:200px;height:100px;background-image: url(/media/images/beta.png);background-repeat: no-repeat;">Mock Usage Report</button></a>-->
 </a>
 		
